# display-driver

./: .gitignore  Cargo.toml  LICENSE  README.md
buses/spi/: Cargo.toml  README.md
buses/spi/src/: lib.rs
display-driver/: Cargo.toml
display-driver/src/: area.rs  color.rs  di.rs  display_bus.rs  lib.rs  panel.rs
display-driver/src/bus/: batch_fill.rs  display_interface_impl.rs  gpio_te.rs  mod.rs  qspi_flash.rs  simple.rs
display-driver/src/eg/: framebuffered.rs  mod.rs
display-driver/src/panel/: initseq.rs  mod.rs  reset.rs
examples/: README.md
examples/stm32h7b0/: Cargo.toml  memory.x
examples/stm32h7b0/src/: graphics.rs  lib.rs
mipidcs/: Cargo.toml  README.md
mipidcs/src/: consts.rs  dcs_types.rs  display_bus.rs  lib.rs  spec.rs
panels/co5300/: Cargo.toml  README.md
panels/co5300/src/: consts.rs  lib.rs  spec.rs
panels/gc9a01/: Cargo.toml  README.md
panels/gc9a01/src/: consts.rs  lib.rs  spec.rs
panels/mipidcs/: Cargo.toml
panels/mipidsi/: Cargo.toml
panels/mipidsi/src/: lib.rs
panels/st7735/: Cargo.toml  README.md
panels/st7735/src/: consts.rs  lib.rs  spec.rs
panels/st7735/src/spec/: generic.rs  mod.rs  tabs.rs  vendor_specs.rs
panels/st7789/: Cargo.toml  README.md
panels/st7789/src/: consts.rs  lib.rs
panels/st7789/src/spec/: generic.rs  mod.rs  vendor_specs.rs
src/: di.rs  display_bus.rs  lib.rs  panel.rs
src/drivers/: mod.rs
src/drivers/co5300/: mod.rs  spec.rs
