[package]
name = "display-driver"
version = "0.1.0"
edition = "2021"
description = "Async display driver traits and interfaces"
license = "Apache-2.0"

[dependencies]
display-interface = { version = "0.5", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[features]
default = ["display-interface"]
