[package]
name = "display-driver"
version = "0.1.0"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["st7735", "st7789", "display"]
repository = "https://github.com/decaday/display-driver"
documentation = "https://docs.rs/display-driver"
description = "Async display driver for embedded systems, supporting various display panels and buses."
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
display-interface = { version = "0.5", optional = true }
embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[features]
default = ["display-interface", "embedded-graphics"]
embedded-graphics = ["dep:embedded-graphics-core"]
