[package]
name = "display-driver-mipidcs"
version = "0.1.1"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mipidcs", "display", "display-driver"]
repository = "https://github.com/decaday/display-driver"
documentation = "https://docs.rs/display-driver-mipidcs"
description = "MIPI DCS consts and functions for display-drivers"
license = "Apache-2.0"

[dependencies]
bitflags = "2.10.0"
display-driver = { version = "0.1.0", path = "../display-driver" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"