[package]
name = "display-driver-spi"
version = "0.1.1"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["spi", "display"]
repository = "https://github.com/decaday/display-driver"
description = "SPI bus implementation for display-driver"
license = "Apache-2.0"

[dependencies]
display-driver = { version = "0.1.0", path = "../../display-driver" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
