[package]
name = "display-driver-co5300"
version = "0.1.0"
edition = "2021"
description = "Display Driver for CO5300"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
display-driver = { path = "../../display-driver" }
display-driver-mipidcs = { path = "../../mipidcs" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
delegate = "0.13.5"
