[package]
name = "display-driver-co5300"
version = "0.1.1"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["co5300", "display", "display-driver"]
description = "Display Driver for CO5300"
repository = "https://github.com/decaday/display-driver"
documentation = "https://docs.rs/display-driver-co5300"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
display-driver = { version = "0.1.0", path = "../../display-driver" }
display-driver-mipidcs = { version = "0.1.1", path = "../../mipidcs" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
delegate = "0.13.5"
