[package]
name = "display-driver-gc9a01"
version = "0.1.0"
edition = "2021"
description = "Display Driver for GC9A01"
license = "Apache-2.0"

[dependencies]
display-driver = { path = "../../display-driver" }
display-driver-mipidcs = { path = "../../mipidcs" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
delegate = "0.13"
