[package]
name = "display-driver-gc9a01"
version = "0.1.0"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["gc9a01", "gc9a01a", "display", "display-driver"]
repository = "https://github.com/decaday/display-driver"
documentation = "https://docs.rs/display-driver-gc9a01"
description = "Display Driver for GC9A01"
license = "Apache-2.0"

[dependencies]
display-driver = { version = "0.1.0", path = "../../display-driver" }
display-driver-mipidcs = { version = "0.1.1", path = "../../mipidcs" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
delegate = "0.13"
